# python-base

./: .pre-commit-config.yaml  CLAUDE.md  config.yaml  pyproject.toml
containers/: Apptainer.def
data/: README
docs/: README
models/: README
notebooks/: README
scripts/: README
src/: README
tests/: README
